@@ -1,24 +1,37 @@
-buildscript {
-    apply from: 'version.gradle'
-    dependencies {
-        classpath group: 'it.polarorb.dynamo', name: 'javafx-gradle-plugin', version: "${gradle.javafxGradlePluginVersion}"
+// Declares binary plugin and its required JavaFX classpath
+apply from: "http://dl.bintray.com/content/shemnon/javafx-gradle/0.3.0/javafx.plugin"
+
+// Configures plugin
+javafx {
+    // Points to JDK and its JavaFX libraries, also declares target runtime JDK
+    javaRuntime = '/Library/Java/JavaVirtualMachines/jdk1.7.0_40.jdk'
+
+    // Application name and ID presented by target OS
+    appID 'HelloWorldApp'
+    appName 'Hello World Application'
+
+    // Main class of application
+    mainClass 'it.polarorb.JavaFxDemo'
+
+    // JVM arguments, system properties, application command line arguments
+    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
+    systemProperties = ['prism.disableRegionCaching':'true']
+    arguments = ['-l', '--fast']
+
+    // Keystore credentials for signing JAR
+    // Generate key: keytool -genkey -alias release -keyalg RSA -keystore keystore.jks -keysize 2048
+    releaseKey {
+        alias = 'release'
+        keyPass = getProjectProperty('keyStorePassword')
+        keyStore = file("${System.properties['user.home']}/keystore/keystore.jks")
+        storePass = getProjectProperty('keyStorePassword')
     }
-    repositories {
-        mavenLocal()
-        mavenCentral()
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 
-    }
-}
-apply plugin: 'java'
+    signingMode 'release'
 
-repositories {
-    mavenCentral()
+    // ...
 }
 
-apply plugin: 'javafx-gradle-plugin'
-
-
-jfx {
-    mainClass = 'it.polarorb.dynamo.JavaFxDemo'
+String getProjectProperty(String propertyName) {
+    project.hasProperty(propertyName) ? project.property(propertyName) : null
 }
